# faiss

./: 0001-boostsra-faiss-1.8.0.patch  0001-faiss_1.8.0-optimize-neq.patch  0002-faiss_1.8.0-optimize-eqv.patch  CMakeLists.txt  LICENSE  README.en.md  README.md  README_en.md
docs/: api_reference.md  best_practices.md  feature_introduction.md  installation_guide.md  quick_start.md  release_notes.md
docs/en/: api_reference.md  best_practices.md  feature_introduction.md  installation_guide.md  menu_faiss.md  quick_start.md  release_notes.md
docs/zh/: api_reference.md  best_practices.md  feature_introduction.md  installation_guide.md  menu_faiss.md  quick_start.md  release_notes.md
faiss/: CMakeLists.txt  Index.cpp  Index.h  Index2Layer.cpp  IndexBinaryHNSW.cpp  IndexFastScan.cpp  IndexFastScan.h  IndexFlat.cpp  IndexFlat.h  IndexFlatCodes.cpp  IndexFlatCodes.h  IndexHNSW.cpp  IndexHNSW.h  IndexIVF.cpp  IndexIVF.h  IndexIVFFastScan.cpp  IndexIVFFastScan.h  IndexIVFFlat.cpp  IndexIVFPQ.cpp  IndexIVFPQFastScan.cpp  IndexNNDescent.cpp  IndexPQFastScan.cpp  IndexPreTransform.cpp  IndexRefine.cpp  IndexRefine.h  index_factory.cpp
faiss/impl/: AuxIndexStructures.h  DistanceComputer.h  HNSW.cpp  NSG.cpp  ProductQuantizer.cpp  ProductQuantizer.h  index_read.cpp  index_write.cpp  pq4_fast_scan.cpp  pq4_fast_scan.h  pq4_fast_scan_search_1.cpp  pq4_fast_scan_search_qbs.cpp  simd_result_handlers.h
faiss/invlists/: InvertedLists.cpp  InvertedLists.h
faiss/sra_krl/: 0001-faiss-1.8.0-add-krl.patch  CMakeLists.txt  README.en.md  README.md  build_lib.sh
faiss/sra_krl/include/: krl.h  krl_internal.h  platform_macros.h  safe_memory.h
faiss/sra_krl/src/: Heap_sort.c  IPdistance_simd.c  IPdistance_simd_f16.c  IPdistance_simd_f16f32.c  IPdistance_simd_f16f32_sve2.c  IPdistance_simd_s8.c  L2distance_simd.c  L2distance_simd_f16.c  L2distance_simd_f16f32.c  L2distance_simd_f16f32_sve2.c  L2distance_simd_u8.c  MinMax_quant.c  NegaIPdistance_simd_f16f32.c  NegaIPdistance_simd_s8.c  handle_IO.c  krl_handles.c  matrix_block_transpose.c  pq_search_with_table_4bit.c  pq_search_with_table_4bit_sve2.c  pq_search_with_table_8bit.c  reorder_2_vectors.c  sve_search_codes.c
faiss/sra_krl/test/: 1-lookup_4bit_table.c  2-lookup_8bit_table.c  3-sparse_distance.c  4-dense_distance.c  5-handle_read_write.c  6-reorder_test.c  7-negative_distance.c  FastScan_for_binary_distance.c  Makefile  binary_distance_test.c  gemm_dequant.c  run_test.sh  tools.h
faiss/utils/: distances.cpp  distances.h  distances_simd.cpp  fp16-arm.h
faiss/utils/arm/asm/: distances_simd.cpp  distances_simd.h  scan_list_with_table.S
tests/: CMakeLists.txt  common_test_functions.cpp  common_test_functions.h  test_distances_fp16.cpp  test_index_flat_fp16.cpp  test_index_hnsw2level_fp16.cpp  test_index_hnsw_fp16.cpp  test_index_hnswpq_fp16.cpp  test_index_hnswsq_fp16.cpp  test_index_refine.cpp  test_params_override.cpp  ut_test.sh  ut_test_hnsw.sh  ut_test_ivfpq.sh
